
v6.8
(xx/04/18)

Changes / Improvements / Optimizations:
General | DietPi.com website: Server has been upgraded to Debian Stretch, featuring HTTPS redirect.
General | FBset is no longer a pre-req package for DietPi systems. This will be removed on fresh installations (not existing, to avoid any package conflicts): https://github.com/Fourdee/DietPi/issues/1716
General | DietPi login script and globals init moved to /etc/profile.d/99-dietpi-login.sh. Ensuring any user on system with sudo permissions can load them. Global commands are also now supported across multiple users, eg: either 'sudo -i G_AGI pacakge' or 'G_SUDO G_AGI package': https://github.com/Fourdee/DietPi/issues/1477
General | G_WHIP*: Improved scaling detection based on character count and line count. We now also calculate character count per line, to determine if additional lines are required against X. In other words, it should be a more 'snug' fit :) https://github.com/Fourdee/DietPi/issues/1740
DietPi-Automation | 'AUTO_SETUP_RAMLOG_MAXSIZE' added to dietpi.txt. Sets max /var/log tmpfs size during 1st run. Requires v6.8 or higher image.
DietPi-Config | Native PC > Soundcard: 'firmware-intel-sound' is now installed automatically for Intel based CPUs.
DietPi-Drive_Manager | Added ability to adjust reserved blocks percentage on ext4 file system: https://github.com/Fourdee/DietPi/issues/1662
DietPi-Drive_Manager | Added ability to check and optionally repair a filesystem. Many thanks to MonZon for the feature request! https://github.com/Fourdee/DietPi/issues/1740
DietPi-Process_tool | Rewrite of save file, to allow for stringed entries. The save file will be cleared during the update, to support this feature: https://github.com/Fourdee/DietPi/issues/1750
DietPi-Process_tool | Added Plex Media Server to process tool, however, transcoding will not be affected by this: https://github.com/Fourdee/DietPi/issues/1750#issuecomment-386826317