@@ -41,7 +41,7 @@ setenv vpu "0"
 setenv hdmioutput "1"
 
 # Default Console Device Setting
-setenv condev "console=tty0"
+setenv condev "console=tty0 console=ttyS0,115200n8"
 
 ###########################################
 
