@@ -23,7 +23,7 @@ setenv hpd "true"
 # setenv hpd "false"
 
 # Default Console Device Setting
-setenv condev "console=tty0"
+setenv condev "console=tty0 console=ttyS0,115200n8"
 
 # Meson Timer
 # 1 - Meson Timer
