@@ -75,7 +75,8 @@ i2c_arm_baudrate=100000
 dtparam=spi=off
 
 #-------Serial/UART-----
-enable_uart=0
+#NB: enabled for 1st run only, if you want to keep this setting, please set CONFIG_SERIAL_CONSOLE_ENABLE=1 in dietpi.txt
+enable_uart=1
 
 #-------Overclock-------
 temp_limit=65
