@@ -191,7 +191,8 @@ CONFIG_NTP_MODE=2
 #WiFi country code. 2 character value (eg GB US DE JP): https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 CONFIG_WIFI_COUNTRY_CODE=GB
 
-#Serial Console: Set to 1 if you require a serial console during 1st run of DietPi.
+#Serial Console: Set to 1 if you require a serial console.
+#	NB: Serial console is always enabled by default for 1st run setup, then disabled afterwards, unless set below.
 CONFIG_SERIAL_CONSOLE_ENABLE=0
 
 #Soundcard
