@@ -1424,12 +1424,12 @@ _EOF_
 
 		#-------------------------------------------------------------------------------------
 		#Enable
-		if [ "$INPUT_DEVICE_VALUE" = "enable" ]; then
+		if [[ $INPUT_DEVICE_VALUE == 'enable' ]]; then
 
 			#systemctl enable serial-getty@*.service # Wildcard does not work, we need to specify each possible tty device name
 			#systemctl enable serial-getty@ttyAMA[0-9].service # Number wildcards do not work, we need to specify each possible tty device number
 
-			G_DIETPI-NOTIFY 2 "Enabling known serial-getty services, please wait..."
+			G_DIETPI-NOTIFY 2 'Enabling known serial-getty services, please wait...'
 			systemctl unmask serial-getty@tty.service 2> /dev/null
 			systemctl enable serial-getty@tty.service 2> /dev/null
 			for ((i=0; i<=$MAX_SERIAL_CONSOLES; i++))
@@ -1451,12 +1451,6 @@ _EOF_
 			# - RPi
 			if (( $G_HW_MODEL < 10 )); then
 
-				if (( ! $(grep -ci -m1 'console=ttyAMA0,115200 ' /boot/cmdline.txt) )); then
-
-					sed -i 's/console=tty1 /console=tty1 console=ttyAMA0,115200 /' /boot/cmdline.txt
-
-				fi
-
 				G_CONFIG_INJECT 'enable_uart=' 'enable_uart=1' /DietPi/config.txt
 
 			# - Odroid C1
@@ -1467,7 +1461,7 @@ _EOF_
 			# - Odroid XU4
 			elif (( $G_HW_MODEL == 11 )); then
 
-				if (( ! $(cat /DietPi/boot.ini | grep -ci -m1 'console=ttySAC2,115200n8 ') )); then
+				if (( ! $(grep -ci -m1 'console=ttySAC2,115200n8 ' /DietPi/boot.ini) )); then
 
 					sed -i 's/console=tty1 /console=tty1 console=ttySAC2,115200n8 /' /DietPi/boot.ini
 
@@ -1481,7 +1475,7 @@ _EOF_
 			# - Pine A64
 			elif (( $G_HW_MODEL == 40 )); then
 
-				if (( ! $(cat /DietPi/uEnv.txt | grep -ci -m1 'console=ttyS0,115200n8 ') )); then
+				if (( ! $(grep -ci -m1 'console=ttyS0,115200n8 ' /DietPi/uEnv.txt) )); then
 
 					sed -i 's/console=tty0 /console=tty0 console=ttyS0,115200n8 /' /DietPi/uEnv.txt
 
@@ -1495,7 +1489,7 @@ _EOF_
 
 		#-------------------------------------------------------------------------------------
 		#Disable
-		elif [ "$INPUT_DEVICE_VALUE" = "disable" ]; then
+		elif [[ $INPUT_DEVICE_VALUE == 'disable' ]]; then
 
 			#Disable services. Although, this seems to have no effect on the cmdline.txt boot.ini etc serial console entries. They run regardless. But lets do it for consistency.
 			G_DIETPI-NOTIFY 2 "Disabling known serial-getty services, please wait..."
@@ -1519,7 +1513,7 @@ _EOF_
 			# - RPi
 			if (( $G_HW_MODEL < 10 )); then
 
-				sed -i 's/console=ttyAMA0,115200 //' /boot/cmdline.txt
+				sed -i 's/console=ttyAMA0,115200 //' /boot/cmdline.txt #Replaced by enable_uart=
 
 				G_CONFIG_INJECT 'enable_uart=' 'enable_uart=0' /DietPi/config.txt
 
