@@ -3,6 +3,7 @@ v6.8
 (xx/04/18)
 
 Changes / Improvements / Optimizations:
+General | All future DietPi images (v6.8 and onwards), now has serial console enabled by default for the 1st run setup. It will be disabled automatically after first run setup to save on resources, unless 'CONFIG_SERIAL_CONSOLE_ENABLE=1' is set in dietpi.txt: https://github.com/Fourdee/DietPi/issues/1759
 General | DietPi.com website: Server has been upgraded to Debian Stretch, featuring HTTPS redirect.
 General | FBset is no longer a pre-req package for DietPi systems. This will be removed on fresh installations (not existing, to avoid any package conflicts): https://github.com/Fourdee/DietPi/issues/1716
 General | DietPi login script and globals init moved to /etc/profile.d/99-dietpi-login.sh. Ensuring any user on system with sudo permissions can load them. Global commands are also now supported across multiple users, eg: either 'sudo -i G_AGI pacakge' or 'G_SUDO G_AGI package': https://github.com/Fourdee/DietPi/issues/1477
@@ -29,7 +30,7 @@ PREP | Optimized rootfs re-parition and resize. This will reduced the required i
 Bug Fixes:
 General | Remote SCP/Rsync fix when running under 'dietpi' user: https://github.com/Fourdee/DietPi/issues/1703
 General | ASUS TB: Resolved issues with onboard WiFi not being detected. Our latest image is required for this fix due to kernel: https://github.com/Fourdee/DietPi/issues/1760
-General | Sparky SBC: Unmute audio fix applied during boot. Many thanks to @sudeep.
+General | Sparky SBC: Unmute USB-DAC audio fix applied during boot. Many thanks to @sudeep.
 DietPi-Config | RPi onboard sound: Resolved an issue where changing from 3.5mm output back to auto, would not have any effect.
 DietPi-Config | Resolved an error when selecting 'Sample Rate' CPU option.
 DietPi-Drive_Manager | Resolved issues with incorrect detection of drives and mounts on Debian Stretch: https://github.com/Fourdee/DietPi/issues/1748
